// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when providing all fields: errors 1`] = `[]`;

exports[`should match snapshot when providing all fields: output 1`] = `
RepositoryEntity {
  "contributions": [],
  "contributors": [],
  "owner": "dzcode-io",
  "provider": "github",
  "repository": "leblad",
  "stats": RepositoryStatsEntity {
    "contributionCount": 10,
    "languages": [
      "TypeScript",
      "Rust",
    ],
  },
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `[]`;

exports[`should match snapshot when providing required fields only: output 1`] = `
RepositoryEntity {
  "owner": "dzcode-io",
  "provider": "github",
  "repository": "leblad",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isIn": "provider must be one of the following values: github, gitlab",
    },
    "property": "provider",
    "target": RepositoryEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "owner must be a string",
    },
    "property": "owner",
    "target": RepositoryEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "repository must be a string",
    },
    "property": "repository",
    "target": RepositoryEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `RepositoryEntity {}`;
